--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Style Sheet -->
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body id="body">
     <header></header>
     <div class="container">
         <div class="text-box">
